# sk-ai-agent

./: .env.sample  README.md  main.py  pyproject.toml
chroma_db/: chroma.sqlite3
data/: 김치찌개_레시피.txt  된장찌개_레시피.txt  토마토_스파게티_레시피.txt
scripts/: embeddings.py
src/api/v1/: common.py  ingredient.py
src/dto/: common.py  ingredient.py
src/ingredient/: dto.py  service.py  tool.py
src/model/: ingredient.py  sample_message.py
src/repositorie/: ingredient.py
src/service/: common.py  ingredient.py
