[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain[google-genai,openai]>=1.2.15",
    "psycopg[binary]>=3.3.3",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.46.0",
]
